# ff-report

./: .env.example  .gitignore  GEMINI.md  Makefile  README.md  build.sh  build_index.py  llm_report.py  preview.sh  prompt.txt  pyproject.toml  requirements.txt  run.sh  setup.py
ff/: __main__.py  build_summary.py  config.py  data.py  game_summary.py  llm_report.py  reports.py  stat_category_map.py  stats.py  templates.py
ff/features/: attendance.py  bad_boy.py  base.py  beef.py  high_roller.py
ff/resources/: crime_categories.json
ff/utils/: constants.py  geocoding_utils.py  utils.py
templates/: base.jinja  summary.jinja  weekly_report.jinja
viewer/: app.js  index.html  style.css
